# qute

./: .gitignore  Cargo.toml  README.md  release.sh
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: config.rs  ctx.rs  main.rs  utils.rs
cli/src/cmd/: eup.rs  fan.rs  led.rs  mod.rs  monitor.rs  power.rs  temp.rs
ctrl/: Cargo.toml  build.rs
ctrl/src/: ffi.rs  lib.rs  platform.rs  stat.rs  types.rs  util.rs
ctrl/src/feature/: eup.rs  fan.rs  fw.rs  hdd.rs  led.rs  mod.rs  power.rs  temp.rs  usb.rs
ctrl/src/hal/: mod.rs  sio.rs
ctrl/src/hal/ec/: controller.rs  dev.rs  mod.rs  status.rs
ctrl/src/hal/lock/: mod.rs  sem.rs
ctrl/src/hal/port/: asm.rs  file.rs  mod.rs
