cargo-features = ["strip"]

[package]
name = "qute-cli"
version = "0.1.0"
authors = ["joylei <leingliu@gmail.com>"]
edition = "2018"

[[bin]]
name = "qute"
path = "src/main.rs"

[dependencies]
pico-args = "0.4"
log = { version="0.4", default-features=false, features=["std"] }
stderrlog = "0.5"
qute-ctrl = { path="../ctrl" }
json = "0.12"
anyhow = "1"
chrono = { version="0.4", default-features=false, features=["std", "clock"] }
